Walk stacks of unmounted nested continuations